TrackListener
Editor selection hub
Automation-MusicBox linked